base64_decode: fix bug #72263 (skips char after padding)